// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<box /> 1`] = `
"┌─root-box─────────────────────────────────────────────────┐
│┌─child-box──────────────────────────────────────────────┐│
││best-box                                                ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘"
`;

exports[`<list /> 1`] = `
"┌─root-box─────────────────────────────────────────────────┐
│┌─child-list─────────────────────────────────────────────┐│
││a                                                       ││
││b                                                       ││
││c                                                       ││
││1                                                       ││
││2                                                       ││
││3                                                       ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘"
`;

exports[`<list />, long 1`] = `
"┌─root-box─────────────────────────────────────────────────┐
│┌─long-list──────────────────────────────────────────────┐│
││0                                                       ││
││1                                                       ││
││2                                                       ││
││3                                                       ││
││4                                                       ││
││5                                                       ││
││6                                                       ││
││7                                                       ││
││8                                                       ││
││9                                                       ││
││10                                                      ││
│└────────────────────────────────────────────────────────┘│
└──────────────────────────────────────────────────────────┘"
`;
